United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7077439 Possible reference through NULL in loopPrdicate.cpp:726
7077439 : Possible reference through NULL in loopPrdicate.cpp:726

Details
Type:
Bug
Submit Date:
2011-08-10
Status:
Closed
Updated Date:
2011-11-25
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
VM crashed at the next line when I tried to port 7070134 into HS20:

    BoolTest::mask bt = cl->loopexit()->test_trip();

It crushed because cl->loopexit() == NULL. I did not see such crush with latest HS22 sources but it does not mean it can't happen. The check cl->is_valid_counted_loop() should be used in the code to avoid such crush.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-12
EVALUATION

See main CR
                                     
2011-09-01
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/6987871cfb9b
                                     
2011-08-23
WORK AROUND

Use this flag as workaround:

-XX:-UseLoopPredicate
                                     
2011-08-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/6987871cfb9b
                                     
2011-08-11



Hardware and Software, Engineered to Work Together