7077439: Possible reference through NULL in loopPredicate.cpp:726

Use cl->is_valid_counted_loop() check.

Reviewed-by: never